# rl_relrepr_gymnasium

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  _vizdoom.ini  a2c copy.py  a2c.py  collect_anchors_obs_ppo copy.py  collect_anchors_obs_ppo.py  collect_data.sh  data.dvc  ema_animation.py  ema_relative_update.py  ema_relative_update_meh.py  environment_mac.yml  eval_1_synthetic.csv  fake_env_play.py  init_training.py  logger.py  miniworld_test.py  miniworld_train.py  models.dvc  paper_stuff.tex  ppo.gin  ppo_atari_lstm.py  ppo_carracing_discrete_rgb_relrepr_end_to_end.py  ppo_minigrid.py  ppo_minigrid_discrete_rgb_relrepr_end_to_end.py  ppo_naturalenv_discrete_rgb_relrepr_end_to_end.py  pyproject.toml  relative_rl_requirements_mac_old.txt  requirements.txt  requirements_mac.txt  run_ppo_carracing.sh  run_ppo_minigrid.sh  sac.py  stitching_test copy.py  stitching_test.py  stitching_test_end_to_end.py  stitching_test_minigrid.py  (+7 more)
.dvc/: config
config/: config.py
data_collection/: collect_actions.py  collect_anchors_obs_ppo_end_to_end.py  collect_data_end_to_end.sh  collect_high_qual_images.py  generate_anchors_indices.py
finetuning/: eval.csv  train.csv
minigrid/: manual_control.py  manual_control_custom.py  minigrid_env.py
minigrid_original/: __init__.py  benchmark.py  manual_control.py  minigrid_env.py  wrappers.py
notebooks/: dataset_anchors_creation.ipynb  dataset_creation.ipynb  ema_animation.ipynb  high_quality_images.ipynb  image_plot.ipynb  paper_plots_curves.ipynb  relative_analysis.ipynb  relative_analysis_new.ipynb  relative_analysis_old.ipynb  stitching_results.ipynb  (+5 more)
(+429 files in other folders)
