[project]
name = "relative_rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "backports-strenum>=1.3.1",
    "gymnasium>=0.29.1",
    "ipykernel>=6.29.5",
    "latentis",
    "opencv-python>=4.10.0.84",
    "pre-commit>=3.8.0",
    "relative-rl",
    "stable-baselines3>=2.3.2",
]

[tool.uv.sources]
latentis = { git = "https://github.com/flegyas/latentis.git", rev = "develop" }
relative-rl = { workspace = true }
