[project]
requires-python = "==3.9.18"
name = "zeroshotrl"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
dependencies = [
    "backports-strenum>=1.3.1",
    "gymnasium[box2d]>=0.29.1",
    "ipykernel>=6.29.5",
    "opencv-python>=4.10.0.84",
    "pre-commit>=3.8.0",
    "stable-baselines3>=2.3.2",
    "tensorboard>=2.17.1",
    "wandb>=0.18.1",
    "numpy==1.26.4",
    "zeroshotrl",
    "gin-config>=0.5.0",
    "torch==2.0.1",
    "latentis==0.0.7",
    "termcolor==2.4.0",
    "pytorch-lightning==2.2.4",
    "tueplots==0.0.17",
    "torchvision==0.15.2",
    "plotly==5.24.1",
    "configspace>=1.2.1",
    "tyro==0.5.10",
    "miniworld>=2.0.0",
    "dvc>=3.59.0",
]

# [tool.uv.sources]
# latentis = { git = "https://github.com/flegyas/latentis.git", rev = "develop" }
# zeroshotrl = { workspace = true }

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
